[package]
name = "fire-ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "fs", "sync", "macros"] }
deno_core = { version = "0.195" }
fire = { package = "fire-http", version = "0.3" }
aho-corasick = "1.0"
tracing = "0.1"
flume = "0.10"
reqwest = "0.11"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread"] }
fire = { package = "fire-http", version = "0.3", features = ["json", "trace", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }