[package]
name = "fire-ssr"
description = "Run javascript ssr in rust"
version = "0.1.2"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/fire-lib/fire-ssr"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
rust-version = "1.64"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "fs", "sync", "macros"] }
deno_core = "0.204"
deno_webidl = "0.118"
deno_url = "0.118"
deno_web = "0.149"
deno_crypto = "0.132"
deno_console = "0.118"
fire = { package = "fire-http", version = "0.3" }
aho-corasick = "1.0"
tracing = "0.1"
flume = "0.11"
reqwest = "0.11"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread"] }
fire = { package = "fire-http", version = "0.3", features = ["json", "trace", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }